A bit of progress on the controller for setting up a game.

--- a/TeddyMatch/TeddyMatch.csproj
+++ b/TeddyMatch/TeddyMatch.csproj
@@ -125,7 +125,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\MatchWord.cs" />
+    <Compile Include="Model\TeddyMatchModel.cs" />
+    <Compile Include="TMObjectLibrary\MatchWord.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -164,10 +165,12 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <None Include="Views\Setup\Create.cshtml" />
+    <None Include="Views\Setup\Edit.cshtml" />
+    <None Include="Views\Setup\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Setup\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
